[package]
name = "lp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "lp-core-util/std"
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hashbrown = { workspace = true }
lp-glsl-compiler = { path = "../../../lp-glsl/crates/lp-glsl-compiler", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }

lp-core-util = { path = "../lp-core-util", default-features = false }